# 12project

./: CMakeLists.txt  main.cpp
exportToHTML/: index.html  test_collection.cpp.html  test_note.cpp.html  test_observer.cpp.html
les_cpp/: Collection.cpp  Note.cpp  NoteManager.cpp
les_h/: Collection.h  Note.h  NoteManager.h  Observer.h  Subject.h
tests/: test_collection.cpp  test_note.cpp  test_observer.cpp
